@@ -1,6 +1,6 @@
 {
   "name": "MomoTweak",
-  "version": "0.17.12",
+  "version": "0.17.13",
   "factorio_version": "0.17",
   "title": "MomoTweak",
   "author": "Momosundeass",
