@@ -1,5 +1,6 @@
 v. 0.17.13
 - remove tin-plate from transport-belt if player don't have basic-transport-belt
+- balance vial recipe again
 
 v. 0.17.12
 - balanced exporation token recipe from wood
